# simba

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOGS.md  Cargo.toml  Dockerfile  README.md  config.schema.json  config.yaml  expanded.rs  generate_config_doc.py  install-hooks.sh  prepare_release.sh  pyproject.toml  result.json  rustfmt.toml  simba.pyi  test.sh  test_config.yaml  test_config2.yaml
.github/workflows/: rust_doc.yml
cmdline/: Cargo.toml
cmdline/src/: main.rs
config_example/: config.yaml  config2.yaml  config_2.yaml  config_plugin.yaml  config_scenario.yaml
config_example/maps/: landmarks_obstruction.yaml  landmarks_square.yaml
config_example/paths/: path1.yaml
configs/: config.yaml
configs/paths/: path1.yaml
doc/: config_documentation.md  global_class_diagram.pulm
doc/user_manual/: mkdocs.yml
example/: Cargo.toml
example/config_example/: config.yaml
example/src/: main.rs
example_gui/: Cargo.toml
example_gui/config_example/: config.yaml
example_gui/src/: main.rs
examples/: basic.rs  gui.rs  plugin.rs  python_external.rs  run_examples.sh
examples/basic/: Cargo.toml
examples/gui/: Cargo.toml
examples/plugin/: Cargo.toml
examples/plugin/src/: main.rs
examples/python/: controller.py  gui.py  master.py  messages.py  navigator.py  physics.py  state_estimator.py
examples/stacked_plugins/: Cargo.toml  config_plugin.yaml  my_rust_plugin.pyi  python_plugin.py  run.sh
macros/: Cargo.toml
macros/src/: lib.rs  time_analysis_impl.rs
python_example/: controller.py  extended_kalman_filter.py  navigator.py  physics.py  state_estimator.py
python_example/config/: config.yaml  config_controller.yaml  config_navigator.yaml  config_physics.yaml  config_state_estimator.yaml
python_scripts/: analyse_results.py
simba-cmd/: Cargo.toml
simba-cmd/src/: main.rs
simba-com/: Cargo.toml
simba-com/src/: lib.rs  rfc.rs  time_ordered_data.rs
simba-core/: Cargo.toml
simba-core/src/: config.rs  constants.rs  errors.rs  lib.rs  logger.rs  plugin_api.rs  pybinds.rs  pywrappers.rs  recordable.rs
simba-core/src/api/: async_api.rs  internal_api.rs  mod.rs
simba-core/src/controllers/: external_controller.rs  mod.rs  pid.rs  pybinds.rs  python_controller.rs
simba-core/src/environment/: mod.rs  oriented_landmark.rs
simba-core/src/gui/: app.rs  configurator.rs  mod.rs  utils.rs
simba-core/src/gui/drawables/: map.rs  mod.rs  observations.rs  popup.rs  robot.rs
simba-core/src/gui/panels/: broker.rs  mod.rs  virtual_nodes.rs
simba-core/src/integration_tests/: action_messages.rs  mod.rs  repeatability.rs
simba-core/src/navigators/: external_navigator.rs  go_to.rs  mod.rs  pybinds.rs  python_navigator.rs  trajectory.rs  trajectory_follower.rs
simba-core/src/networking/: message_handler.rs  mod.rs  network.rs  network_manager.rs  service.rs  service_manager.rs
simba-core/src/node/: mod.rs  module.rs  node_factory.rs
simba-core/src/physics/: external_physics.rs  internal_physics.rs  mod.rs  pybinds.rs  python_physics.rs
simba-core/src/physics/fault_models/: additive_robot_centered.rs  fault_model.rs  mod.rs  python_fault_model.rs
simba-core/src/physics/robot_models/: holonomic.rs  honolomic.rs  mod.rs  unicycle.rs
simba-core/src/scenario/: config.rs  mod.rs
simba-core/src/sensors/: displacement_sensor.rs  external_sensor.rs  gnss_sensor.rs  mod.rs  odometry_sensor.rs  oriented_landmark_sensor.rs  robot_sensor.rs  scan_sensor.rs  sensor_manager.rs  sensor_variables.rs  speed_sensor.rs
simba-core/src/sensors/fault_models/: additive.rs  additive_observation_centered_polar.rs  additive_robot_centered.rs  additive_robot_centered_polar.rs  clutter.rs  external_fault.rs  fault_model.rs  misassociation.rs  misdetection.rs  mod.rs  python_fault_model.rs
simba-core/src/sensors/sensor_filters/: external_filter.rs  id_filter.rs  label_filter.rs  mod.rs  python_filter.rs  range_filter.rs  string_filter.rs
simba-core/src/simulator/: async_simulator.rs  mod.rs  results.rs  simulator_config.rs
simba-core/src/state_estimators/: external_estimator.rs  mod.rs  perfect_estimator.rs  pybinds.rs  python_estimator.rs
simba-core/src/time_analysis/: execution.rs  exporter.rs  mod.rs  statistics.rs  time_analysis_config.rs
simba-core/src/utils/: barrier.rs  confy.rs  determinist_random_variable.rs  enum_tools.rs  geometry.rs  macros.rs  maths.rs  mod.rs  numbers.rs  occupancy_grid.rs  periodicity.rs  python.rs  read_only_lock.rs  rfc.rs  time_ordered_data.rs
simba-core/src/utils/distributions/: bernouilli.rs  exponential.rs  fixed.rs  mod.rs  normal.rs  poisson.rs  uniform.rs
simba-core/test_config/: config.yaml  scenario.yaml  sensor_trigger.yaml
simba-core/test_config/paths/: path1.yaml  path2.yaml
simba-macros/: Cargo.toml
simba-macros/src/: lib.rs
simba-tools/: Cargo.toml
simba-tools/src/: main.rs
src/: configurable.rs  constants.rs  errors.rs  lib.rs  logger.rs  main.rs  node.rs  node_factory.rs  plugin_api.rs  pybinds.rs  pywrappers.rs  recordable.rs  result_analyser.rs  robot.rs  simulator.rs  stateful.rs  test_config.rs  time_analysis.rs  turtlebot.rs
src/api/: async_api.rs  internal_api.rs  mod.rs
src/controllers/: controller.rs  external_controller.rs  mod.rs  pid.rs  pybinds.rs  python_controller.rs
src/gui/: app.rs  configurator.rs  mod.rs  utils.rs
src/navigators/: external_navigator.rs  go_to.rs  mod.rs  navigator.rs  pybinds.rs  python_navigator.rs  trajectory.rs  trajectory_follower.rs
src/networking/: message_handler.rs  mod.rs  network.rs  network_manager.rs  service.rs  service_manager.rs
src/physics/: external_physic.rs  external_physics.rs  internal_physics.rs  mod.rs  perfect_physic.rs  perfect_physics.rs  physic.rs  physics.rs  pybinds.rs  python_physics.rs
src/plots/: mod.rs  real_time_plots.rs
src/sensors/: external_sensor.rs  gnss_sensor.rs  mod.rs  odometry_sensor.rs  oriented_landmark_sensor.rs  robot_sensor.rs  sensor.rs  sensor_manager.rs  turtle_sensor.rs
src/simulator/: mod.rs
src/state_estimators/: external_estimator.rs  mod.rs  pybinds.rs  (+3 more)
test_config/: config.yaml
(+86 files in other folders)
