# Workspace
[workspace]
members = [
    "simba-cmd",
    "simba-macros",
    "simba-core",
    "examples/stacked_plugins",
    "examples/plugin",
]
default-members = ["simba-core", "simba-cmd", "simba-macros"]  # Skip root for tests

resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
authors = ["Maxime Escourrou <maxime.escourrou@laas.fr>"]
license = "GPLv3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]



