# Workspace
[workspace]
members = [
    "simba-cmd",
    "simba-com",
    "simba-core",
    "simba-macros",
    "simba-tools",
    "examples/stacked_plugins",
    "examples/plugin",
]
default-members = [
    "simba-cmd",
    "simba-com",
    "simba-core",
    "simba-macros",
    "simba-tools"
    ]

resolver = "2"

[workspace.package]
version = "1.5.0"
edition = "2024"
authors = ["Maxime Escourrou <maxime.escourrou@laas.fr>"]
license = "GPLv3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]



