[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "simba"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module", "pyo3/abi3", "pyo3/abi3-py310", "gui"]
