[package]
name = "example"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtlebot_simulator ={ path = "../", features = ["time-analysis"]}
# nalgebra = { version = "^0.32.3", features = ["serde"] }
# serde_derive = "^1.0"
# serde = { version = "^1.0", features = ["derive"] }
# serde_json = "^1.0.107"
log = "0.4"