[package]
name = "simba"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "simba"  # Python imports as 'simba', Rust uses package name 'simba-core'
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust deps and tests
doctest = false

[features]
gui = ["egui", "eframe"] # Enable GUI features
schema = ["schemars"]  # Enable schemars for schema generation
force_hard_determinism = []  # Disable features that may introduce non-determinism

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "^0.34", features = ["serde-serialize"] }
serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_path_to_error = "0.1"
libm = "^0.2.15"
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
colored = "^3.0.0"

egui = { version = "0.33.0", optional = true}
eframe = { version = "0.33.0" , default-features = false, optional = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # Enables wayland support and fixes clipboard issue.
]}
log = "^0.4.28"

# Major changes in rand, which need further look in the distributions implementations
rand = "0.8.5"
rand_chacha = "0.3.1"
statrs = "0.17.1"

config-checker = { git = "https://github.com/mescourrou/rust_config_checker", rev = "53a575a"}

simba-macros ={ path = "../simba-macros" , version = "*"}

csv ={ version = "^1.3.1"}

pyo3 ={ version = "^0.27", features = ["auto-initialize"]}
libc ={ version = "*" }
rsdoc = "0.3.0"

schemars = { version = "1.1.0", optional = true }

[dependencies.confy]
version = "^1.0"
features = ["yaml_conf"]
default-features = false

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"



[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "python_external"
path = "../examples/python_external.rs"

[[example]]
name = "gui"
required-features = ["gui"]
path = "../examples/gui.rs"