[package]
name = "simba"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "simba"  # Python imports as 'simba', Rust uses package name 'simba-core'
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust deps and tests
doctest = false

[features]
default = ["gui"]
gui = ["egui", "eframe"] # Enable GUI features
schema = ["schemars"]  # Enable schemars for schema generation
force_hard_determinism = []  # Disable features that may introduce non-determinism

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies (local)
simba-macros = { path = "../simba-macros", version = "*" }
simba-com = { path = "../simba-com", version = "*" }

# Main dependencies (alphabetical order)
colored = "^3.0.0"
config-checker = { git = "https://github.com/mescourrou/rust_config_checker", rev = "53a575a" }
confy = { version = "^1.0", features = ["yaml_conf"], default-features = false }
csv = "^1.3.1"
lazy_static = "1.5.0"
libc = "*"
libm = "^0.2.15"
log = "^0.4.28"
nalgebra = { version = "^0.34", features = ["serde-serialize"] }
pyo3 = { version = "^0.27", features = ["abi3", "abi3-py310"] }
rand = "0.8.5"  # Major changes in rand, which need further look in the distributions implementations
rand_chacha = "0.3.1"
regex = "1.12.2"
rsdoc = "0.3.0"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9.34"
statrs = "0.17.1"

# Optional dependencies (alphabetical order)
eframe = { version = "0.33.0", default-features = false, optional = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # Enables wayland support and fixes clipboard issue.
] }
egui = { version = "0.33.0", optional = true }
schemars = { version = "1.1.0", optional = true }
constcat = "0.6.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"



[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "python_external"
path = "../examples/python_external.rs"

[[example]]
name = "gui"
required-features = ["gui"]
path = "../examples/gui.rs"
