[package]
name = "simba-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
simba = { path = "../simba-core", features = ["gui", "schema"], version = "*"}
clap = { version = "4.5.48", features = ["derive"] }
schemars = { version = "1.1.0" }
serde_json = "1.0.145"