[package]
name = "plugin_example"
version = "0.1.0"
edition = "2021"

[dependencies]
simba = { path = "../../simba-core", version = "*"}

nalgebra = { version = "^0.34", features = ["serde-serialize"] }
serde_derive = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }